# AI-project

./: .gitignore  README.md  advanced_demo.py  fix_references.py  gui_simulator.py  pyproject.toml  report_template.md  requirements.txt  run_simulation.py  visual_ai_simulation.py  visual_simulation.py
demo_results/: batch_results.csv
src/: __init__.py  config.py  enhanced_world.py  genetic_evolution.py  grid.py  main.py  swarm_intelligence.py  world.py
src/agents/: __init__.py  agent.py  boss.py  evolutionary_monster.py  monster.py  predator.py  thia.py
src/examples/: __init__.py  run_example.py
tests/: test_agents.py  test_grid.py  test_simulation.py
view/: __init__.py  gui.py
