[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predator-badlands"
version = "1.0.0"
description = "Predator: Badlands Multi-Agent Simulation"
authors = [{name = "Student", email = "student@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pytest>=7.4.0"
]

[project.scripts]
predator-sim = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py312']